<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/analyticsCheckBox">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="5dp"
                      android:layout_marginRight="5dp"
                      android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/privacy_policy"
                      android:layout_marginBottom="5dp"
                      style="@style/SubHeading"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/privacy_policy_date"
                      android:layout_marginBottom="5dp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/privacy_para_1"
                      android:layout_marginBottom="5dp"
                    android:textColor="@android:color/black"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/privacy_para_2"
                      android:layout_marginBottom="5dp"
                      android:textColor="@android:color/black"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/privacy_para_3"
                      android:layout_marginBottom="10dp"
                      android:textColor="@android:color/black"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/information_collection_and_use"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/information_collection_para_1"
                      android:layout_marginBottom="5dp"
                      android:textColor="@android:color/black"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/information_collection_para_2"
                      android:layout_marginBottom="10dp"
                      android:textColor="@android:color/black"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/log_data"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/log_data_para_1"
                      android:layout_marginBottom="5dp"
                      android:textColor="@android:color/black"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/log_data_para_2"
                      android:layout_marginBottom="10dp"
                      android:textColor="@android:color/black"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/communications"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/communications_para"
                      android:layout_marginBottom="10dp"
                      android:textColor="@android:color/black"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/third_party_access"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="5dp"
                      android:text="@string/third_party_para_1"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/bulleted_list"
                      android:paddingLeft="10dp"
                      android:paddingRight="10dp"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="10dp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/opt_out_rights"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="10dp"
                      android:text="@string/opt_out_para"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/data_retention_policy"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="10dp"
                      android:text="@string/data_retention_para"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/children"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="10dp"
                      android:text="@string/children_para"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/your_consent"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="10dp"
                      android:text="@string/your_consent_para"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/security"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="10dp"
                      android:text="@string/security_para"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/changes"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="5dp"
                      android:text="@string/changes_para_1"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="5dp"
                      android:text="@string/changes_para_2"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="10dp"
                      android:text="@string/changes_para_3"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/contact_us"
                      android:layout_marginBottom="5dp"
                      style="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="10dp"
                      android:text="@string/contact_us_para"/>
        </LinearLayout>
    </ScrollView>
    <CheckBox
        android:text="@string/opt_out_of_analytics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/analyticsCheckBox"
        android:layout_above="@+id/closeDialogButton"
  />
    <Button
        android:text="@string/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/closeDialogButton"
    android:layout_alignParentBottom="true"/>
</RelativeLayout>