<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64F0E8"
    tools:context="com.ewa.indecisiverps.ui.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bg"
        android:contentDescription="@string/main_background_image_content_description"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rps"
        android:id="@+id/headingTextView"
        style="@style/Heading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:shadowColor="@android:color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2" />

    <Button
        android:text="@string/decide_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="15dp"
        android:id="@+id/decideNowButton" />

    <Button
        android:text="@string/my_decisions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:visibility="gone"
        android:id="@+id/decisionsButton"
        android:layout_below="@+id/decideNowButton"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:visibility="gone"
        android:id="@+id/socialButton"
        android:layout_below="@+id/decisionsButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/socialButton"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:id="@+id/loginButton" />

    <Button
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:id="@+id/aboutButton"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/for_the_indecisive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subheaadingTextView"
        style="@style/SubHeading"
        android:layout_below="@+id/headingTextView"
        android:layout_centerHorizontal="true"
        android:shadowColor="#ffffff"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2" />


</RelativeLayout>
