<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ewa.indecisiverps.ui.LoginActivity"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/firebaseLoginTextView"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="20sp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="20sp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>



        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccentDark"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/forgotten_password"
            android:id="@+id/forgotPasswordTextView"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccentDark"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/sign_up_here"
            android:id="@+id/registerTextView"
            android:layout_gravity="center_horizontal" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/why_log_in"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/connect_with_others"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/enable_two_player_mode"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/save_your_decisions"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/browse_your_old_decisions"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/play_them_again"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"/>



    </LinearLayout>
</RelativeLayout>
