<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="8"
    android:id="@+id/friendListItemLayout"
    android:background="@drawable/user_layout_bg"
    android:layout_margin="10dp">

    <ImageView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/friendIconImageView"
        android:contentDescription="@string/icon_with_initial_of_user"
        android:scaleType="fitXY"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/fromNameTextView"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorAccentDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:id="@+id/fromEmailTextView"
            android:textSize="14sp"
            android:textColor="@color/colorAccentDark"/>
    </LinearLayout>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_action_refuse"
        android:contentDescription="@string/x_icon_content_description"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/refuseRequestImageView"/>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_action_accept"
        android:contentDescription="@string/check_icon_content_description"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/acceptRequestImageView"/>
</LinearLayout>